fix(custom.css): force navbar text to left align

--- a/src/rocm_docs/rocm_docs_theme/static/custom.css
+++ b/src/rocm_docs/rocm_docs_theme/static/custom.css
@@ -187,6 +187,10 @@ a#ot-sdk-btn {
   align-items: flex-start !important;
 }
 
+.navbar-brand .logo__title {
+  text-align: left !important;
+}
+
 /* Fix for sidebar width mismatch between Bootstrap and the Sphinx Book Theme */
 @media (min-width: 960px) {
   input#__primary:checked ~ .bd-container .bd-sidebar-primary {
